--- a/front/index.html
+++ b/front/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="main">
-   
+
   </div>
 
   <script src="./js/views/loginView.js"></script>
@@ -25,6 +25,6 @@
   <script src="./js/views/mainAppView.js"></script>
 
    
-    <script> new Navegacao().irParaSelectSex() </script>
+    <script> new Navegacao().irParaMainApp() </script>
   </body>
   </html>
