mudança automática das imagens iniciais

--- a/front/index.html
+++ b/front/index.html
@@ -25,6 +25,6 @@
   <script src="./js/views/mainAppView.js"></script>
 
    
-    <script> new Navegacao().irParaMainApp() </script>
+    <script> new Navegacao().irParaLogin() </script>
   </body>
   </html>
