adição de login

--- a/front/index.html
+++ b/front/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
   <div id="main">
-
+    
+    
   </div>
-
+  <script src="./js/controllers/inicioController.js"></script>
+  <script src="./js/views/inicioView.js"></script>
   <script src="./js/views/loginView.js"></script>
   <script src="./js/views/singUpView.js"></script>
   <script src="./js/controllers/Navegacao.js"></script> 
@@ -23,8 +25,9 @@
   <script src="./js/views/selectInterestsView.js"></script>
   <script src="./js/controllers/mainAppController.js"></script>
   <script src="./js/views/mainAppView.js"></script>
-
-   
-    <script> new Navegacao().irParaSignUp() </script>
-  </body>
-  </html>
+  <script src="./js/controllers/matchesController.js"></script>
+  <script src="./js/views/matchesView.js"></script>
+  <script src="./js/models/inicioModel.js"></script>
+  <script> new Navegacao().irParaLogin() </script> 
+</body>
+</html>
