tela signUp completa

--- a/front/index.html
+++ b/front/index.html
@@ -28,6 +28,6 @@
   <script src="./js/controllers/matchesController.js"></script>
   <script src="./js/views/matchesView.js"></script>
   <script src="./js/models/inicioModel.js"></script>
-  <script> new Navegacao().irParaLogin() </script> 
+  <script> new Navegacao().irParaInicio() </script> 
 </body>
 </html>
