--- a/front/index.html
+++ b/front/index.html
@@ -28,6 +28,8 @@
   <script src="./js/controllers/matchesController.js"></script>
   <script src="./js/views/matchesView.js"></script>
   <script src="./js/models/inicioModel.js"></script>
+  <script src="./js/controllers/passwordController.js"></script>
+  <script src="./js/views/passwordView.js"></script>
   <script> new Navegacao().irParaInicio() </script> 
 </body>
 </html>
