--- a/front/index.html
+++ b/front/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div id="main">
-    
+   
     
   </div>
-  <script src="./js/models/inicioModel.js"></script>
+  <script src="./js/models/mainAppModel.js"></script>
 
   <script src="./js/controllers/inicioController.js"></script>
   <script src="./js/controllers/Navegacao.js"></script> 
@@ -36,6 +36,6 @@
   <script src="./js/views/mainAppView.js"></script>
 
   
-  <script> new Navegacao().irParaInicio() </script> 
+  <script> new Navegacao().irParaMainApp() </script> 
 </body>
 </html>
