--- a/front/index.html
+++ b/front/index.html
@@ -24,6 +24,7 @@
   <script src="./js/controllers/matchesController.js"></script>
   <script src="./js/controllers/signUpPasswordController.js"></script>
   <script src="./js/controllers/loginPasswordController.js"></script>
+<script src="./js/controllers/continueToEmailController.js"></script>
 
   <script src="./js/views/loginPasswordView.js"></script>
   <script src="./js/views/inicioView.js"></script>
@@ -34,8 +35,8 @@
   <script src="./js/views/selectSexView.js"></script> 
   <script src="./js/views/selectInterestsView.js"></script> 
   <script src="./js/views/mainAppView.js"></script>
-
+<script src="./js/views/continueToEmailView.js"></script>
   
-  <script> new Navegacao().irParaMainApp() </script> 
+  <script> new Navegacao().irParaInicio() </script> 
 </body>
 </html>
