--- a/front/index.html
+++ b/front/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <div id="main">
-   
+    
     
   </div>
   <script src="./js/models/mainAppModel.js"></script>
-
+  
   <script src="./js/controllers/inicioController.js"></script>
   <script src="./js/controllers/Navegacao.js"></script> 
   <script src="./js/controllers/loginController.js"></script>
@@ -24,8 +24,10 @@
   <script src="./js/controllers/matchesController.js"></script>
   <script src="./js/controllers/signUpPasswordController.js"></script>
   <script src="./js/controllers/loginPasswordController.js"></script>
-<script src="./js/controllers/continueToEmailController.js"></script>
-
+  <script src="./js/controllers/continueToEmailController.js"></script>
+  <script src="./js/controllers/profileController.js"></script>
+  
+  
   <script src="./js/views/loginPasswordView.js"></script>
   <script src="./js/views/inicioView.js"></script>
   <script src="./js/views/loginView.js"></script>
@@ -35,7 +37,9 @@
   <script src="./js/views/selectSexView.js"></script> 
   <script src="./js/views/selectInterestsView.js"></script> 
   <script src="./js/views/mainAppView.js"></script>
-<script src="./js/views/continueToEmailView.js"></script>
+  <script src="./js/views/continueToEmailView.js"></script>
+  <script src="./js/views/profileView.js"></script>
+  
   
   <script> new Navegacao().irParaInicio() </script> 
 </body>
