busca  mesmos gostos funcionando corretamente

--- a/front/index.html
+++ b/front/index.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/style.css">
+  <link href="https://www.dafontfree.net/embed/c2stbW9kZXJuaXN0LWJvbGQmZGF0YS85OTYvbS8xOTMxMTkvU2stTW9kZXJuaXN0LUJvbGQub3Rm" rel="stylesheet" type="text/css"/>
   <title>Tinder</title>
 </head>
 <body>
-  <div id="main">
-    
-    
-  </div>
+  <div id="main"></div>
+
+
   <script src="./js/models/mainAppModel.js"></script>
   
   <script src="./js/controllers/inicioController.js"></script>
@@ -41,6 +41,6 @@
   <script src="./js/views/profileView.js"></script>
   
   
-  <script> new Navegacao().irParaInicio() </script> 
+  <script> new Navegacao().irParaInicio()  </script> 
 </body>
 </html>
