--- a/front/index.html
+++ b/front/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/style.css">
-  <link href="https://www.dafontfree.net/embed/c2stbW9kZXJuaXN0LWJvbGQmZGF0YS85OTYvbS8xOTMxMTkvU2stTW9kZXJuaXN0LUJvbGQub3Rm" rel="stylesheet" type="text/css"/>
-  <title>Tinder</title>
+ <!--  <link href="https://www.dafontfree.net/embed/c2stbW9kZXJuaXN0LWJvbGQmZGF0YS85OTYvbS8xOTMxMTkvU2stTW9kZXJuaXN0LUJvbGQub3Rm" rel="stylesheet" type="text/css"/>
+  --> <title>Tinder</title>
 </head>
 <body>
   <div id="main"></div>
@@ -22,7 +22,6 @@
   <script src="./js/controllers/selectInterestsController.js"></script>
   <script src="./js/controllers/mainAppController.js"></script>
   <script src="./js/controllers/matchesController.js"></script>
-  <script src="./js/controllers/signUpPasswordController.js"></script>
   <script src="./js/controllers/loginPasswordController.js"></script>
   <script src="./js/controllers/continueToEmailController.js"></script>
   <script src="./js/controllers/profileController.js"></script>
@@ -33,7 +32,6 @@
   <script src="./js/views/loginView.js"></script>
   <script src="./js/views/singUpView.js"></script> 
   <script src="./js/views/matchesView.js"></script> 
-  <script src="./js/views/signUpPasswordView.js"></script> 
   <script src="./js/views/selectSexView.js"></script> 
   <script src="./js/views/selectInterestsView.js"></script> 
   <script src="./js/views/mainAppView.js"></script>
