--- a/front/index.html
+++ b/front/index.html
@@ -38,6 +38,6 @@
   <script src="./js/views/profileView.js"></script>
   
   
-  <script> new Navegacao().irParaMainApp()  </script> 
+  <script> new Navegacao().irParaInicio()  </script> 
 </body>
 </html>
