--- a/front/index.html
+++ b/front/index.html
@@ -5,12 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/style.css">
-  <!--  <link href="https://www.dafontfree.net/embed/c2stbW9kZXJuaXN0LWJvbGQmZGF0YS85OTYvbS8xOTMxMTkvU2stTW9kZXJuaXN0LUJvbGQub3Rm" rel="stylesheet" type="text/css"/>
-  --> <title>Tinder</title>
+  
+  <title>Tinder</title>
 </head>
 <body>
-  <div id="main"></div>
-    
+  <div id="main">
+ 
+  </div>
+  
   <script src="./js/controllers/Navegacao.js"></script> 
   
   
@@ -24,7 +26,7 @@
   <script src="./js/controllers/loginPasswordController.js"></script>
   <script src="./js/controllers/continueToEmailController.js"></script>
   <script src="./js/controllers/profileController.js"></script>
-  
+  <script src="./js/controllers/itsAMAtchController.js"></script>
   
   <script src="./js/views/loginPasswordView.js"></script>
   <script src="./js/views/inicioView.js"></script>
@@ -36,8 +38,8 @@
   <script src="./js/views/mainAppView.js"></script>
   <script src="./js/views/continueToEmailView.js"></script>
   <script src="./js/views/profileView.js"></script>
+  <script src="./js/views/itsAMatchView.js"></script>
   
-  
-  <script> new Navegacao().irParaInicio()  </script> 
+    <script> new Navegacao().irParaInicio()  </script>  
 </body>
 </html>
