cross is a match funcionando

--- a/front/index.html
+++ b/front/index.html
@@ -40,6 +40,6 @@
   <script src="./js/views/profileView.js"></script>
   <script src="./js/views/itsAMatchView.js"></script>
   
-    <script> new Navegacao().irParaMainApp()  </script>  
+    <script> new Navegacao().irParaInicio()  </script>  
 </body>
 </html>
